@@ -1,6 +1,7 @@
 --------------------------------------------
 13-Nov-2010,  version 1.6-18
 Started support for multi-core/cluster processing (together with Matteo Mattiuzzi)
+Fixed bug in aggregate with unequal x and y fact (thanks to Kevin Ummel for reporting)
 Added drop=FALSE to "[" methods, to return a Raster*. 
 
 --------------------------------------------
